--- a/infrastructure/dashboard/release.yaml
+++ b/infrastructure/dashboard/release.yaml
@@ -11,4 +11,4 @@ spec:
         kind: HelmRepository
         name: kubernetes-dashboard
         namespace: kubernetes-dashboard
-  inerval: 10m
+  interval: 10m
