--- a/infrastructure/roles/serviceaccount.yaml
+++ b/infrastructure/roles/serviceaccount.yaml
@@ -1,4 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
+metadata:
+  name: dashboard-reder
 secrets:
-- name: dashboard-reader
+- name: dashboard-reader-tpken
