--- a/infrastructure/dashboard/serviceaccount.yaml
+++ b/infrastructure/dashboard/serviceaccount.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: dashboard-reder
+  name: dashboard-reader
+  namespace: kubernetes-dashboard
 secrets:
 - name: dashboard-reader-tpken
