--- a/infrastructure/dashboard/serviceaccount-binding.yaml
+++ b/infrastructure/dashboard/serviceaccount-binding.yaml
@@ -1,7 +1,8 @@
-kind: ClusterRoleBinding
+kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: dashboard-reader
+  namespace: kubernetes-dashboard
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -9,3 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: dashboard-reader
+  namespace: kubernetes-dashboard
