--- a/infrastructure/dashboard/serviceaccount-binding.yaml
+++ b/infrastructure/dashboard/serviceaccount-binding.yaml
@@ -1,8 +1,7 @@
-kind: RoleBinding
+kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: dashboard-reader
-  namespace: kubernetes-dashboard
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
