--- a/infrastructure/roles/dojo-user-role.yaml
+++ b/infrastructure/roles/dojo-user-role.yaml
@@ -7,8 +7,24 @@ rules:
       - get
       - list
       - watch
-      - create
     apiGroups:
       - ''
     resources:
-      - services/proxy
+      - nodes
+  - verbs:
+      - get
+      - list
+      - watch
+    apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions
+  - verbs:
+      - get
+      - list
+      - watch
+    apiGroups:
+      - rbac.authorization.k8s.io
+    resources:
+      - clusterroles
+      - clusterrolebindings
