--- a/infrastructure/dashboard/access-role.yaml
+++ b/infrastructure/dashboard/access-role.yaml
@@ -2,6 +2,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: dashboard-access
+  namespace: kubernetes-dashboard
 rules:
   - verbs:
       - get
