--- a/infrastructure/ingress/release.yaml
+++ b/infrastructure/ingress/release.yaml
@@ -1,14 +1,17 @@
+# https://github.com/bitnami/charts/blob/master/bitnami/nginx-ingress-controller
+
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: ingress-nginx
-  namespace: ingress
+  name: nginx
 spec:
+  releaseName: nginx-ingress-controller
   chart:
     spec:
-      chart: ingress-nginx
+      chart: nginx-ingress-controller
       sourceRef:
         kind: HelmRepository
-        name: ingress-nginx
-        namespace: ingress
-  interval: 10m
+        name: bitnami
+        namespace: flux-system
+      version: "9.1.12"
+  interval: 1h0m0s
